day 8-9 SQL & JPA Mastery